[package]
name = "ruaft"
version = "0.1.0"
description = "Raft implemented in Rust"
authors = ["Jing Yang <ditsing@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["raft", "consensus-protocol"]
readme = "README.md"
repository = "https://github.com/ditsing/ruaft"
homepage = "https://github.com/ditsing/ruaft"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bytes = "1.0"
crossbeam-utils = "0.8"
futures-channel = "0.3.15"
futures-util = "0.3.15"
labrpc = "0.1.12"
log = "0.4"
parking_lot = "0.11.1"
rand = "0.8"
serde = "1.0.116"
serde_derive = "1.0.116"
tokio = { version = "1.7", features = ["rt-multi-thread", "time", "parking_lot"] }

[dev-dependencies]
anyhow = "1.0"
futures = { version = "0.3.15", features = ["thread-pool"] }
scopeguard = "1.1.0"
test_utils = { path = "test_utils" }
kvraft = { path = "kvraft" }

[workspace]
members = [
    "kvraft",
    "linearizability",
    "test_utils",
]
