[workspace.package]
version = "0.1.0"
description = "Raft implemented in Rust"
authors = ["Jing Yang <ditsing@gmail.com>"]
edition = "2021"
license = "MIT"
keywords = ["raft", "consensus-protocol"]
readme = "README.md"
repository = "https://github.com/ditsing/ruaft"
homepage = "https://github.com/ditsing/ruaft"

[workspace]
resolver = "2"
members = [
    "raft",
    "kvraft",
    "linearizability",
    "test_configs",
    "test_utils",
]
default-members = [
    "raft",
    "kvraft",
    "linearizability",
    "test_configs",
    "test_utils",
]
