[package]
name = "durio"
version = "0.1.0"
authors = ["Jing Yang <ditsing@gmail.com>"]
edition = "2018"
description = "KV store backed by Ruaft, targeting Raspberry Pis."
documentation = ""
readme = "README.md"
homepage = "https://github.com/ditsing/ruaft/tree/master/durio"
repository = "https://github.com/ditsing/ruaft"
license = "MIT"
keywords = ["raft"]
categories = ["raft"]

[dependencies]
async-trait = "0.1"
bytes = "1.0"
futures-util = "0.3.15"
kvraft = { path = "../kvraft" }
lazy_static = "1.4.0"
parking_lot = "0.11.1"
ruaft = { path = "..", features = ["integration-test"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tarpc = { version = "0.27", features = ["serde-transport", "tcp"] }
test_utils = { path = "../test_utils", default-features = false }
tokio = { version = "1.7", features = ["macros", "rt-multi-thread", "time", "parking_lot"] }
tokio-serde = { version = "0.8", features = ["json"] }
warp = "0.3"

[dev-dependencies]
