[package]
name = "kvraft"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = "0.1"
bincode = "1.3.3"
log = "0.4.14"
parking_lot = "0.11.1"
rand = "0.8"
ruaft = { path = "..", features = ["integration-test"] }
serde = "1.0.116"
serde_derive = "1.0.116"
test_utils = { path = "../test_utils" }
tokio = { version = "1.7", features = ["time", "parking_lot"] }

[dev-dependencies]
scopeguard = "1.1.0"
stdext = "0.3.0"
test_configs = { path = "../test_configs" }
