[package]
name = "kvraft"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
bincode = "1.3.3"
futures = "0.3.21"
log = "0.4"
parking_lot = "0.12"
rand = "0.8"
raft = { path = "../raft" }
serde = "1.0"
serde_derive = "1.0"
test_utils = { path = "../test_utils", optional = true }
tokio = { version = "1.7", features = ["time", "parking_lot"] }

[dev-dependencies]
scopeguard = "1.1.0"
stdext = "0.3"
test_configs = { path = "../test_configs" }

[features]
default = []
integration-test = ["test_utils"]
