[package]
name = "test_configs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3.3"
bytes = "1.1"
futures-util = "0.3.19"
kvraft = { path = "../kvraft" }
labrpc = "0.2.1"
linearizability = { path = "../linearizability" }
log = "0.4"
parking_lot = "0.11"
rand = "0.8"
ruaft = { path = "..", features = ["integration-test"] }
serde = "1.0"
test_utils = { path = "../test_utils" }

[dev-dependencies]
futures = { version = "0.3.15", features = ["thread-pool"] }
stdext = "0.3"
